[package]
name = "dnd_world"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "s"

[dependencies]
bevy = { version = "0.9" }
bevy_egui = "0.17.1"
bevy-inspector-egui = "0.14.0"
ron = "0.8"
serde = { version = "1", features = ["derive"] }

[[bin]]
name = "dnd_world"
path = "src/main.rs"
